fix promotional buttons spacing and make footer responsive

--- a/assets/templates/greenparty/css/responsive.css
+++ b/assets/templates/greenparty/css/responsive.css
@@ -1,7 +1,7 @@
 /**
  * Main canvas and header don't need to be a fixed width
  */
-.canvas, .header .inner {
+.canvas, .header .inner, .footer .inner {
     max-width: 860px;
     width: auto;
 }
@@ -40,9 +40,14 @@
     padding-bottom: 0;
 }
 
+/* take padding off slideshow */
+#bannerslider {
+    margin-bottom: 0;
+}
+
 .bannerbuttons {
     text-align: center;
-    padding: 9px;
+    padding: 9px 0;
     margin: 0;
 }
 .bannerbuttons a:link, .bannerbuttons a:visited {
@@ -50,7 +55,10 @@
     float: none;
 }
 .bannerbuttons a, .bannerbuttons a.button1, .bannerbuttons a.button2, .bannerbuttons a.button3  {
-    margin: 9px;
+    margin: 9px 0 9px 14px;
+}
+.bannerbuttons a:first-child, .bannerbuttons a.button1:first-child {
+    margin-left: 0;
 }
 
 /**
